projects/examples/source/06.16.cpp
///////////////////////////////////

// chapter : Projects and Libraries

///////////////////////////////////

// section : Module Support

///////////////////////////////////

// content : Function main

///////////////////////////////////

import library;

import library.submodule;

///////////////////////////////////

int main()
{
    library::test_v1();

	library::test_v2();

//	library::test_v3(); // error

	library::test_v4();
}

///////////////////////////////////